# GuidedMatDiffusion

./: README.md  env_sub.yml  pyproject.toml
data_and_analysis/: README.md  pyproject.toml
data_and_analysis/data/: Cr3Si.cif  genai_allSC_final_may2025.pkl
data_and_analysis/data/ac_susceptibility/0449_HM_HfTa4Zr/: 20250415a_HM449HfTa4Zr_chiAC_vs_T_B_0.001.txt  20250415a_HM449HfTa4Zr_chiAC_vs_T_B_2.001.txt  20250415a_HM449HfTa4Zr_chiAC_vs_T_B_3.001.txt  20250415a_HM449HfTa4Zr_chiAC_vs_T_B_4.002.txt  20250416a_HM449HfTa4Zr_chiAC_vs_T_B_5.001.txt  20250416a_HM449HfTa4Zr_chiAC_vs_T_B_6.001.txt
data_and_analysis/data/ac_susceptibility/0451_HM_MoTaZr2/: 20250501_HM451MoTaZr2_chiAC_vs_T_B_0.3T.001.txt  20250501_HM451MoTaZr2_chiAC_vs_T_B_0T.002.txt  20250501_HM451MoTaZr2_chiAC_vs_T_B_1T.001.txt  (+1 more)
data_and_analysis/data/synthesis_details/: 0447_HM_MoTiTa2.txt  0448_HM_MoTi2Ta.txt  0450_HM_HfMoTa2.txt  0451_HM_MoTaZr2.txt  0452_HM_Hf2MoTi.txt  0453_HM_HfMoTi.txt  0454_HM_Nb2TaZr.txt  0455_HM_NbTa2Zr.txt  0457_HM_MoNbZr2.txt  0458_HM_Mo3NbTi2.txt  0462_HM_Hf2Nb3Ru.txt  0463_HM_Mo3NbRu2.txt  0464_HM_MoNbRu2.txt  0468_HM_HfTa4Zr.txt  0470_HM_MoNbTa2.txt  0471_HM_MoNb2Ta.txt
data_and_analysis/data/xrd/: 0449_HM_HfTa4Zr.xy  0451_HM_MoTaZr2.xy  0454_HM_Nb2TaZr.xy  0455_HM_NbTa2Zr.xy  0462_HM_Hf2Nb3Ru.xy  0463_HM_Mo3NbRu2.xy  0464_HM_MoNbRu2.xy  0470_HM_MoNbTa2.xy  0471_HM_MoNb2Ta.xy
data_and_analysis/prototype_analysis/representative_structures/: Ir2Mo3Os_sg10_idx2112.cif  IrMo2Os_sg25_idx1428.cif  Mo5ReSiTc_sg25_idx57708.cif  Mo6OsRu_sg200_idx88841.cif  README.txt
data_and_analysis/susceptibility_analysis/: hc2_fit_parameters.csv  susceptibility_analysis.ipynb
diffcsp/: run.py  test.ipynb
(+56 files in other folders)
